feat: wire managed executors into starter